Add unit test for scene two.